# SEAGATO

./: .gitignore  readme.md
AuthGo/sso/: go.mod  go.sum
AuthGo/sso/cmd/migrator/: main.go
AuthGo/sso/cmd/sso/: main.go
AuthGo/sso/internal/app/: app.go
AuthGo/sso/internal/app/grpc/: app.go
AuthGo/sso/internal/grpc/auth/: server.go
AuthGo/sso/internal/services/auth/: auth.go
AuthGo/sso/internal/storage/sqlite/: sqlite.go
AuthGo/sso/storage/: sso.db
SEAGATO-UI/: CMakeLists.txt  main.cpp
SEAGATO-UI/AudioServer/: AudioServer.cpp  AudioServer.h
SEAGATO-UI/Interfaces/: IAudioServer.h  IServerAuth.h  Isso.h
SEAGATO-UI/ServerAuth/: ServerAuth.cpp  ServerAuth.h
SEAGATO-UI/UI/: Login.ui  Streamer.h  Worker.h  login.cpp  login.h  player.cpp  player.h  player.ui  signup.cpp  signup.h  signup.ui
SEAGATO-UI/proto/: sso.proto
SEAGATO-UI/sso/: sso.cpp  sso.h
SEAGATO-server/: .gitignore  CMakeLists.txt  config.yaml
SEAGATO-server/Builder/: ServiceBuilder.cpp  ServiceBuilder.h
SEAGATO-server/Config/: Config.cpp  Config.h
SEAGATO-server/Entities/: Track.cpp  Track.h  User.cpp  User.h
SEAGATO-server/GRPC_Implementations/: GRPCAuth.cpp  GRPCAuth.h  GRPCServer.cpp  GRPCServer.h  example_client.cpp  example_server.cpp  grpc.cpp  grpc.h
SEAGATO-server/Implementations/: DBController.cpp  DBController.h  ServerController.cpp  ServerController.h  YaController.cpp  YaController.h  grpc.cpp  grpc.h
SEAGATO-server/Interfaces/: IClient.h  IController.h  IDBController.h  IServer.h
SEAGATO-server/Services/: Interactor.cpp  Interactor.h
SEAGATO-server/proto/: audio.proto  auth.proto
SEAGATO-server/src/: main.cpp
SEAGATO-server/tools/: tools.cpp  tools.h
SEAGATO-tg/: .gitignore  audio_pb2.py  audio_pb2.pyi  audio_pb2_grpc.py  main.py  server.py
SEAGATO-yandex/: .gitignore  audio_pb2.py  audio_pb2.pyi  audio_pb2_grpc.py  main.py  server.py  test.py
SEAGATO-yandex/protos/: audio.proto
TGSEAGATO/: .gitignore
server-reworked/: .gitignore  CMakeLists.txt
server-reworked/docker/: compose.yaml
server-reworked/proto/: audio.proto  auth.proto
server-reworked/src/: main.cpp
server-reworked/src/Config/: Config.cpp  Config.h  IConfig.h
server-reworked/src/Database/: Database.cpp  Database.h  IDatabase.h
test_client/: CMakeLists.txt
test_client/.cache/clangd/index/: client.cpp.E25755C8A7D07697.idx
test_client/proto/: auth.proto  sso.proto
test_client/src/: client.cpp
